--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.1",
+    "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "send": "^0.19.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "multer": "^2.0.1",
+    "nodemon": "^3.1.0",
+    "path-to-regexp": "^0.1.12"
   }
 }
