--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "multer-storage-cloudinary": "^4.0.0",
+    "on-headers": "~1.1.0",
     "send": "^0.19.0"
   },
   "devDependencies": {
